*** Don't forget to increment the version number in nfs.cl for each commit
*** [and leave this message at the top of the file]

2003-12-01    <dancy@CANDY2K>

	* nfs.cl:  Bumped version to 1.1.5.  Removed (safety 1) from
	optimization declaration.  Changed default nfslocaluid and
	nfslocalgid to 9999 and 9999.  Changed default nfslocalumask to
	0.  Changed default nfs-set-mode-bits to #o666.  Updated access
	checking code so that if *nfs-rw-uids* is 't', everyone is allowed
	read/write access.  This feature has been requested twice.
	
2003-11-06  Ahmon Dancy  <dancy@dancy>

	* Updated readme.txt to discuss proper use of *nfs-fw-uids*.
	
2003-07-03  Ahmon Dancy  <dancy@dancy>

	* Updated readme.txt  Updated nfs.cfg.sample.

2003-07-03    <dancy@CANDY2K>

	* mountd and nfsd can now use an existing portmapper instead of
	the built-in one.  This will help for people who have Microsoft's
	SFU installed.
	
2003-07-02    <Ahmon Dancy@GOBY>

	* nfs.cl: Added *nfs-set-mode-bits* variable and corresponding
	code for allow the administrator to set extra mode bits before
	returning them to the client.
	
2003-06-06    <dancy@CANDY2K>

	
	* nfs.cl: Bumped version to 1.1.4

	Updated nfs-okay-to-write so that it checks *nfs-rw-uids* for
	other user ids that are granted write access.
	
	* nfs.cfg.sample:  New parameter *nfs-rw-uids*.

	* readme.txt: Added documentation about *nfs-rw-uids*.

	* util.cl: Fixed stupid signed/unsigned bug in the ULARGE_INTEGER
	foreign struct definition.  It was screwing up the results of the
	diskfree function.  Also added :foreign-static-gc allocation type
	to ff:allocate-fobject calls.

	* loadem.cl: Modified function 'main' for convenience during
	debugging.  

	* notes.txt: Clarifications

2003-05-10    <dancy@DANCYSOFT>

	* mountd.cl: mountd-export: Return no group information for
	exported filesystems.  This means that the export is for
	"everyone".  This enhances interoperability with more picky
	clients.

2003-03-19    <dancy@DANCYSOFT>
