@@ -4,8 +4,6 @@
  (*nfslocaluid* 1000) 
  (*nfslocalgid* 50)
  (*nfs-rw-uids* nil)
- (*nfsdebug* nil)
- (*nfslocalumask* #o022)
  (*exports* (("/c" "c:/")
              ("/d" "d:/")))
  (*hosts-allow* nil)
