@@ -1,6 +1,14 @@
 *** Don't forget to increment the version number in nfs.cl for each commit
 *** [and leave this message at the top of the file]
 
+2003-12-03    <dancy@DANCYSOFT>
+	* Makefile:  added 'demo' rule for making demo binaries.
+
+	* loadem.cl:  Added demo keyword arg to buildit.
+
+	* nfs.cfg.sample: Removed *nfsdebug* and *nfslocalumask* from
+	sample config.
+
 2003-12-01    <dancy@CANDY2K>
 
 	* nfs.cl:  Bumped version to 1.1.5.  Removed (safety 1) from
